--- a/jenkinsFile
+++ b/jenkinsFile
@@ -8,7 +8,7 @@ pipeline {
         }
       stage('script'){
           steps{
-                sh 'jsonSchemaSniffer.py'
+                sh 'main.py'
                 }
             }
         }
