--- a/jenkinsFile
+++ b/jenkinsFile
@@ -6,7 +6,7 @@ pipeline {
                 bat 'python --version'
             }
         }
-      stage('script'){
+      stage('Run Script'){
           steps{
                 bat 'main.py'
                 }
